      - package-installs-font-to-usr-x11r6
      - package-uses-obsolete-file
      - postinst-should-not-set-usr-doc-link
      - udeb-uses-non-gzip-data-tarball
      - x11-games-should-be-in-usr-games

  * checks/*:
    + [NT] Remove some old tags that are no longer useful.
      (Closes: #663516)
    + [NT] Migrate to sorted_index from sorted_file_info.
  * checks/binaries{,.desc}:
    + [NT] Move embedded library data to a data file.
    + [NT] Add ELF hardening checks.  Thanks to Kees Cook for
      report and the patches.  (Closes: 650536)
  * checks/changelog-file:
    + [NT] Output the correct line number for the "line-too-long"
      tag.  Thanks to Arno Töll for the report.  (Closes: #657402)
  * checks/changes-file{,.desc}:
    + [NT] Remove Ubuntu specific handling of distribution names.
      Instead replace it with a more generalized one that derivatives
      can reuse by extending vendor specific data files.  Thanks to
      Daniel Dehennin for the suggestion.  (Closes: #648777)
  * checks/control-file:
    + [NT] Rewrote parts to use Lintian::Collect for fetching data.
  * checks/cruft{,.desc}:
    + [NT] Check for quilt control dirs in the debian packaging files.
  * checks/deb-format{,.desc}:
    + [NT] Replace old udeb compression tag with a more general
      one.  (Closes: #664600)
    + [NT] Remove logic for checking if a deb is meant for
      Ubuntu.  Instead unconditionally emit the tag and let the
      vendor profiles handle it.
  * checks/fields{,.desc}:
    + [NT] Add devref reference.
    + [NT] Remove special handling of the Ubuntu specific field,
      "original-maintainer".  This field is now handled by vendor
      specific data files.  (Closes: #649852)
    + [JW,NT] Check for common mistakes with preview release and
      release candidate versions.  For non-native packages, this
      check is only done on initial uploads of new upstream
      releases.  Thanks to Stefano Rivera and Julian Taylor for