@@ -37,7 +37,7 @@ use strict;
 use warnings;
 
 use Lintian::Tags qw(tag);
-use Lintian::Util;
+use Lintian::Util qw(fail);
 
 use File::Basename;
 
