@@ -24,7 +24,7 @@ use strict;
 use warnings;
 
 use Lintian::Tags qw(tag);
-use Lintian::Util;
+use Lintian::Util qw(fail);
 use Cwd qw(realpath);
 
 sub run {
