@@ -27,7 +27,7 @@ use File::Basename;
 use Lintian::Data;
 use Lintian::Relation;
 use Lintian::Tags qw(tag);
-use Lintian::Util;
+use Lintian::Util qw(fail slurp_entire_file);
 
 # Libraries that should only be used in the presence of certain capabilities
 # may be located in subdirectories of the standard ldconfig search path with
