@@ -24,7 +24,7 @@ use warnings;
 
 use lib "$ENV{'LINTIAN_ROOT'}/lib";
 use Lintian::Command qw(spawn reap);
-use Lintian::Util qw(fail);
+use Lintian::Util qw(delete_dir fail);
 
 ($#ARGV == 2) or fail 'syntax: bin-pkg-control <pkg> <type> <dir>';
 my ($pkg, $type, $dir) = @ARGV;
