@@ -753,7 +753,7 @@ unshift @INC, "$opt{'LINTIAN_ROOT'}/lib";
 require Lintian::Lab;
 
 require Lintian::Util;
-import Lintian::Util;
+import Lintian::Util qw(fail read_dpkg_control);
 
 require Lintian::Collect;
 require Lintian::DepMap::Properties;
