@@ -101,7 +101,7 @@ unshift @INC, "$LINTIAN_ROOT/lib";
 require Lintian::Lab;
 require Lintian::Lab::Manifest;
 require Lintian::Processable::Package;
-require Lintian::Util;
+require Lintian::Util; # _parse_dpkg_control_iterative
 
 # turn file buffering off
 $| = 1;
