@@ -54,7 +54,7 @@ use Lintian::Data;
 use Lintian::Lab;
 use Lintian::Profile;
 use Lintian::Internal::FrontendUtil;
-use Lintian::Util;
+use Lintian::Util qw(read_dpkg_control slurp_entire_file);
 
 my $profile = Lintian::Profile->new (find_default_profile ("$LINTIAN_ROOT/profiles"),
                                      $LINTIAN_ROOT,
