@@ -58,7 +58,7 @@ BEGIN {
 
 use lib "$ENV{'LINTIAN_ROOT'}/lib";
 
-use Lintian::Util;
+use Lintian::Util qw(fail read_dpkg_control);
 
 # --- Global configuration
 
