@@ -33,6 +33,7 @@ lintian (2.5.7) UNRELEASED; urgency=low
     + [NT] Remove some old tags that are no longer useful.
       (Closes: #663516)
     + [NT] Migrate to sorted_index from sorted_file_info.
+    + [NT] Explicitly import needed subs from L::Util.
   * checks/binaries{,.desc}:
     + [NT] Move embedded library data to a data file.
     + [NT] Add ELF hardening checks.  Thanks to Kees Cook for
@@ -164,6 +165,7 @@ lintian (2.5.7) UNRELEASED; urgency=low
     + [JW] Consider duplicate fields a syntax error in dctrl files.
       Previously, duplicate fields were silently ignored (except
       when a separate tag would check for it).  (Closes: #664061)
+    + [NT] Stop exported a majority of all subs by default.
 
   * profiles/ubuntu/main.profile:
     + [NT] Add a number of NMU related tags to the list of disabled
